--- a/20180321table.md
+++ b/20180321table.md
@@ -14,6 +14,10 @@
 
   使用该数据库，在新建表前一定要使用该语句选择数据库
 
+* show tables;
+
+  查看数据库中的表
+
 ## 创建表
 
 ```MySQL
@@ -23,7 +27,7 @@ create table 表名 (属性名  数据类型  [完整性约束条件]，
                    )；
 ```
 
-完整性约束
+### 完整性约束
 
 * primary key
 * foreign key
@@ -32,18 +36,18 @@ create table 表名 (属性名  数据类型  [完整性约束条件]，
 * auto_increment
 * default
 
-给表添加外键
+### 给表添加外键
 
 * constraint 外键别名 foreign key （属性1，属性2。。。）references 父表名（属性21，属性22。。。）
 
-查看表基本结构
+### 查看表基本结构
 
-* describe 表名;查看该表的结构
-* show create 表名;查看表详细结构
+* describe 表名;查看该表的结构,简写：DESC 表名；
+* show create table表名;查看表详细结构
 
 ## 修改表 alter table
 
-修改表包括修改表名、修改字段名、修改字段数据类型、增加字段、删除字段、修改字段的排列位置、更改默认存储引擎、删除表的外键约束等
+修改表包括修改表名、修改字段名、修改字段数据类型、增加字段、删除字段、修改字段的排列位置、更改默认存储引擎、删除表的外键约束等
 
 ### 修改表名 rename
 
@@ -55,13 +59,13 @@ create table 表名 (属性名  数据类型  [完整性约束条件]，
 
 ### 修改字段名 change
 
-* alter table 表名 change 旧字段名 新字段名 新数据类型；
+* alter table 表名 change 旧字段名 新字段名 新数据类型；
 
-  change和modify都可以修改数据类型，不同的是change既可以修改数据类型也可以修改字段名。如果不需要修改数据类型则将新数据类型写为原来的数据类型即可，如果不需要该字段名，则将新字段名写成旧字段名即可。
+  change和modify都可以修改数据类型，不同的是change既可以修改数据类型也可以修改字段名。如果不需要修改数据类型则将新数据类型写为原来的数据类型即可，如果不需要该字段名，则将新字段名写成旧字段名即可。
 
 ### 增加字段 add
 
-* alter table 表名 add 字段名 数据类型 [完整性约束] [first | after 某字段];
+* alter table 表名 add 字段名 数据类型 [完整性约束] [first | after 某字段];
 
 ### 删除字段 drop
 
@@ -69,7 +73,7 @@ create table 表名 (属性名  数据类型  [完整性约束条件]，
 
 ### 修改字段的排列位置 modify
 
-* alter table 表名 modify 字段名 数据类型 first | after 某字段;
+* alter table 表名 modify 字段名 数据类型 first | after 某字段;
 
 ### 更改表的存储引擎
 
